<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".principalActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/P1t1"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkescuela"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/P1CH2"
        app:layout_constraintStart_toEndOf="@+id/checkcasa"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <CheckBox
        android:id="@+id/checkcasa"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:text="@string/P1CH1"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <CheckBox
        android:id="@+id/checkpublico"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/P1CH3"
        app:layout_constraintStart_toEndOf="@+id/checkescuela"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/P1pre1"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:text="@string/genero"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkescuela" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="358dp"
        android:layout_height="62dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:text="@string/p1radio1" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:text="@string/p1radio2" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:text="@string/p1radio3" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/p1pre3"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Spinner
        android:id="@+id/spinneredos"
        android:layout_width="346dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:entries="@array/Estados"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>